# api/controllers/camera.js
@@ -57,4 +57,19 @@ module.exports.getCameraImage = (req, res) => {
         .catch((err) => {
             res.status(500).json({code: err.code || 0, message: err.message});
         });
-}
+};
+
+module.exports.setCameraState = (req, res) => {
+
+    let id = req.swagger.params.id.value;
+    let state = req.swagger.params.state.value;
+
+    global.module.setPrivacy(id, state === 'disable')
+        .then( (status) => {
+            res.json( { data: { status: status }, result : 'ok' } );
+        })
+        .catch( (err) => {
+            res.status(500).json( { code: err.code || 0, message: err.message } );
+        });
+};
+
